Move parsing of --patch-module to ModuleBootstrap